# autosai

./: README.md  pyproject.toml  setup.py
autosai/: model_selection.py  preprocessing.py  utils.py
autosai/models/: base_model.py  cnn_model.py  dense_model.py  lstm_model.py  tabnet_model.py  transformer_model.py
autosai/optimization/: bayesian_optimization.py
examples/: tutorial_0.py
tests/: test_model_selection.py  test_models.py  test_optimization.py  test_preprocessing.py  test_utils.py
