[tool.poetry]
name = "autosai"
version = "0.1.0"
description = "A library for AutoML model selection and hyperparameter tuning."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.22.0"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
tensorflow = "^2.1.0"
optuna = "^3.0.0"
pytorch-tabnet = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Define any scripts if necessary

[tool.poetry.extras]
# Define any extra dependencies if necessary
